--- a/assets/style.css
+++ b/assets/style.css
@@ -9,7 +9,15 @@
 body {
   background: white;
 }
+p {
+  font-size: 25px;
+  color: black;
+  font-weight: 600px;
+}
 
+.hide{
+  display: none;
+}
 .app {
   background: white;
   width: 90%;
@@ -22,17 +30,18 @@ body {
 .app h1{
   font-size: 40px;
   font-weight: 600;
-  color: rgb(48, 34, 128);
+  color: black;
   border-bottom: 1px solid #333;
   padding-bottom: 30px;
 }
 
 .quiz {
   padding: 20px 0;
+
 }
 .quiz h2 {
   font-size: 25px;
-  color: rgb(48, 34, 128);
+  color: black;
   font-weight: 600px;
 }
 
@@ -49,12 +58,17 @@ body {
   cursor: pointer;
   transition: 0.15s;
 }
-.btn:hover {
+.btn:hover:not([disabled]) {
   background: #222;
   color: white;
-
 }
-#next-btn {
+.btn:disabled{
+  cursor: no-drop;
+}
+
+#start-btn,
+#score-form-btn,
+#reset-btn {
   background: rgb(48, 34, 128);
   color: white;
   font-weight: 500;
@@ -64,5 +78,6 @@ body {
   margin: 20px auto 0;
   border-radius: 4px;
   cursor: pointer;
-  display: none;
+ 
 }
+
